--- a/analysis/templates/html/changes-size-chart.html
+++ b/analysis/templates/html/changes-size-chart.html
@@ -7,39 +7,26 @@
         width: 960px;
         background: #f2f2f2;
     }
-
     #change-size-chart text,
     #change-size-chart label {
         font: 11px sans-serif;
         font-family: 'Lucida Grande','Calibri',Helvetica,Arial,sans-serif;
     }
-
     #change-size-chart .line-movingAvg {
         fill: none;
         stroke-width: 1.5px;
         stroke: #b2182b;
     }
-
-    .axis path,
-    .axis line {
+    #change-size-chart .axis path,
+    #change-size-chart .axis line {
         fill: none;
         stroke: #000;
         shape-rendering: crispEdges;
     }
-
-    .brush .extent {
+    #change-size-chart .brush .extent {
         stroke: #fff;
         fill-opacity: .125;
         shape-rendering: crispEdges;
-    }
-
-    .legend .box {
-        fill: #f9f9f9;
-        stroke: black;
-        opacity: 0.8;
-    }
-    .legend .items {
-        font-size: 12px;
     }
     .tooltip {
         position: absolute;
