--- a/analysis/templates/html/amount-of-committers-chart.html
+++ b/analysis/templates/html/amount-of-committers-chart.html
@@ -966,7 +966,8 @@ date,value\n\
         controlsPanel.addSpace();
         var dropDown = newGroupIndexDropDown(controlsPanel, data, "Unique committers per: ", ["day", "week", "month"]);
 
-        bars.onHover([newTooltip(root, svgRoot, uiConfig, {css: "tooltip"}).update, newShading().update]);
+        var tooltip = newTooltip(root, svgRoot, uiConfig, {css: "tooltip", showCategory: false});
+        bars.onHover([tooltip.update, newShading().update]);
 
         data.onUpdate([x.update, y.update, bars.update, xAxis.update, yAxis.update, xBrush.update, dropDown.update,
             movingAverageLine.update, autoGroup(data).update, newNothingToShowLabel(root, svgRoot, uiConfig).update]);
