proper axis name

--- a/analysis/templates/html/amount-of-committers-chart.html
+++ b/analysis/templates/html/amount-of-committers-chart.html
@@ -957,7 +957,7 @@ date,value\n\
         var y = newYScale(uiConfig);
         var bars = newBars(svg, uiConfig, x, y);
         var xAxis = newXAxis(svg, uiConfig, x);
-        var yAxis = newYAxis(svg, "Change size", y);
+        var yAxis = newYAxis(svg, "Amount of committers", y);
         var xBrush = newXBrush(svg, uiConfig, x, brushHeight);
         var movingAverageLine = newMovingAverageLine(svg, uiConfig, x, y);
 
